loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1489_method_type_param_clone_bound.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Decoded<T> {
    pub value: T,
}
impl<T> incan_std_core::reflection::HasClassName for Decoded<T> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<T> incan_std_core::reflection::HasTypeClassName for Decoded<T> {
    fn __class_name__() -> &'static str {
        "Decoded"
    }
}
impl<T> incan_std_core::reflection::HasFieldMetadata for Decoded<T> {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<T> incan_std_core::reflection::HasTypeFieldMetadata for Decoded<T> {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("T"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<T> Decoded<T> {
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("T"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub trait Marker {
    fn mark(&self) -> i64;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Codec {
    pub name: String,
}
impl incan_std_core::reflection::HasClassName for Codec {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Codec {
    fn __class_name__() -> &'static str {
        "Codec"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Codec {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Codec {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Codec {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "name" => Some(format!("{}", self.name)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("name".to_string(), format!("{}", self.name))]
    }
}
impl Codec {
    pub fn pick<T: Marker + Clone>(&self, items: Vec<T>) -> Result<T, String> {
        for item in items.iter() {
            return Ok::<T, String>(item.clone());
        }
        return Err::<T, String>("empty".to_string());
    }
    pub fn pick_plain<T: Clone>(&self, items: Vec<T>) -> Result<T, String> {
        for item in items.iter() {
            return Ok::<T, String>(item.clone());
        }
        return Err::<T, String>("empty".to_string());
    }
    pub fn decode<T: Marker>(&self, decoded: Decoded<T>) -> Result<T, String> {
        return Ok::<T, String>(decoded.value);
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub fn first<T: Clone>(items: Vec<T>) -> Result<T, String> {
    for item in items.iter() {
        return Ok::<T, String>(item.clone());
    }
    return Err::<T, String>("empty".to_string());
}
pub fn unwrap<T>(decoded: Decoded<T>) -> Result<T, String> {
    return Ok::<T, String>(decoded.value);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = ();
}
