loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1489_web_extractor_field_read_clones.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use json::{Deserialize as _, Serialize as _};
pub use crate::__incan_std::web::route;
pub use crate::__incan_std::web::Json;
pub use crate::__incan_std::web::Query;
pub use crate::__incan_std::web::GET;
pub use crate::__incan_std::serde::json;
pub use crate::__incan_std::r#async;
#[derive(
    ::serde::Serialize,
    ::serde::Deserialize,
    Debug,
    Clone,
    incan_derive::FieldInfo,
    incan_derive::IncanClass
)]
struct Search {
    q: String,
}
impl incan_std_core::reflection::HasClassName for Search {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Search {
    fn __class_name__() -> &'static str {
        "Search"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Search {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Search {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("q"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("q"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Search {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "q" => Some(format!("{}", self.q)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("q".to_string(), format!("{}", self.q))]
    }
}
impl json::Serialize for Search {
    fn to_json(&self) -> String {
        incan_std_data::json::__private::stringify_or_raise(self, stringify!(Search))
    }
}
impl json::Deserialize for Search {
    fn from_json(json_str: String) -> Result<Self, String> {
        incan_std_data::json::__private::parse_or_error(&json_str)
    }
}
#[derive(
    ::serde::Serialize,
    ::serde::Deserialize,
    Debug,
    Clone,
    incan_derive::FieldInfo,
    incan_derive::IncanClass
)]
struct Reply {
    value: String,
}
impl incan_std_core::reflection::HasClassName for Reply {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Reply {
    fn __class_name__() -> &'static str {
        "Reply"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Reply {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Reply {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Reply {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl json::Serialize for Reply {
    fn to_json(&self) -> String {
        incan_std_data::json::__private::stringify_or_raise(self, stringify!(Reply))
    }
}
impl json::Deserialize for Reply {
    fn from_json(json_str: String) -> Result<Self, String> {
        incan_std_data::json::__private::parse_or_error(&json_str)
    }
}
#[incan_web_macros::route("/search", methods = ["GET"])]
async fn search(query: Query<Search>) -> Json<Reply> {
    return crate::__incan_std::web::Json(Reply { value: query.q.clone() });
}
#[incan_web_macros::route("/assign", methods = ["GET"])]
async fn assign(query: Query<Search>) -> Json<Reply> {
    let picked = query.q.clone();
    return crate::__incan_std::web::Json(Reply { value: picked });
}
#[incan_web_macros::route("/list", methods = ["GET"])]
async fn listed(query: Query<Search>) -> Json<Reply> {
    let values = vec![query.q.clone()];
    return crate::__incan_std::web::Json(Reply {
        value: incan_std_core::collections::list_get(&values, (0) as i64).clone(),
    });
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = ();
}
