loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1490_comprehension_over_rust_iterator.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::std::env::args;
fn lengths() -> Vec<i64> {
    return ((args()).into_iter())
        .map(|argument| ::std::convert::identity(argument.len() as i64))
        .collect::<Vec<_>>();
}
fn long_arguments() -> Vec<String> {
    return ((args()).into_iter())
        .filter_map(|argument| {
            if ::std::convert::identity(argument.len() as i64) > 1 {
                Some(argument)
            } else {
                None
            }
        })
        .collect::<Vec<_>>();
}
fn squares(source: incan_std_core::iter::Generator<i64>) -> Vec<i64> {
    return (::std::iter::Iterator::fuse(source).into_iter())
        .map(|value| value * value)
        .collect::<Vec<_>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let arguments: Vec<String> = ((args()).into_iter())
        .map(|argument| argument)
        .collect::<Vec<_>>();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["", ""]; let __args : Vec < String > =
        vec![format!("{}", ::std::convert::identity(arguments.len() as i64))];
        incan_std_core::strings::fstring(& __parts, & __args) }
    );
    let _ = println!("{}", ::std::convert::identity(lengths().len() as i64));
    let _ = println!("{}", ::std::convert::identity(long_arguments().len() as i64));
    let positions: std::collections::HashMap<String, i64> = (arguments
        .iter()
        .enumerate()
        .map(|(idx, value)| (idx as i64, value.clone())))
        .map(|(index, argument)| (argument.clone(), index))
        .collect::<std::collections::HashMap<_, _>>();
    let _ = println!("{}", ::std::convert::identity(positions.len() as i64));
    let _ = println!(
        "{}",
        ::std::convert::identity(squares(incan_std_core::iter::Generator::new((0_i64.. (4
        as i64)).flat_map(move | value | {
        incan_std_core::iter::Generator::new(std::iter::once(value)) }))).len() as i64)
    );
}
