loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1494_collection_method_literal_arguments.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::collections::Deque;
fn probe(requested: Vec<String>) -> i64 {
    let mut pending = Deque::<String>::from_iter(requested);
    let _ = pending.append("default".into());
    let _ = pending.appendleft("first".into());
    let mut names: Vec<String> = Vec::<String>::new();
    let _ = names.push("default".to_string());
    let mut seen: std::collections::HashSet<String> = std::collections::HashSet::new();
    let _ = {
        (&mut seen).insert("default".to_string());
    };
    let mut labels: std::collections::HashMap<String, String> = std::collections::HashMap::new();
    labels.insert("default".to_string(), "value".to_string());
    let _ = labels.insert("first".to_string(), "value".to_string());
    return pending.__len__() + ::std::convert::identity(names.len() as i64)
        + ::std::convert::identity(seen.len() as i64)
        + ::std::convert::identity(labels.len() as i64);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", probe(vec!["a".to_string()]));
}
