loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1668_dict_contains_key.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn has_manifest(files: std::collections::HashMap<String, String>) -> bool {
    return files.contains_key(<_ as AsRef<str>>::as_ref(&"loaf.toml"));
}
fn has_id(counts: &mut std::collections::HashMap<i64, i64>, id: i64) -> bool {
    return counts.contains_key(&id);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut files: std::collections::HashMap<String, String> = std::collections::HashMap::new();
    files.insert("loaf.toml".to_string(), "[project]".to_string());
    let key = "README.md".to_string();
    let _ = println!("{}", has_manifest(files.clone()));
    let _ = println!("{}", files.contains_key(< _ as AsRef < str >> ::as_ref(& key)));
    let mut counts: std::collections::HashMap<i64, i64> = std::collections::HashMap::new();
    counts.insert(7, 1);
    let _ = println!("{}", has_id(& mut counts, 7));
}
