loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1668_dict_keys_outside_comprehension.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn names(d: std::collections::HashMap<String, i64>) -> Vec<String> {
    return {
        let mut __v = (d.keys().cloned().collect::<Vec<_>>()).clone();
        __v.sort();
        __v
    };
}
fn has(d: std::collections::HashMap<String, i64>, key: String) -> bool {
    return {
        let __incan_probe = &key;
        let __incan_probe = <_ as AsRef<str>>::as_ref(&__incan_probe);
        d.keys()
            .cloned()
            .collect::<Vec<_>>()
            .iter()
            .any(|__incan_item| <_ as AsRef<str>>::as_ref(__incan_item) == __incan_probe)
    };
}
fn count_keys(d: std::collections::HashMap<String, i64>) -> i64 {
    let keys = d.keys().cloned().collect::<Vec<_>>();
    return ::std::convert::identity(keys.len() as i64);
}
fn total(d: std::collections::HashMap<String, i64>) -> i64 {
    let mut sum = 0;
    for value in (d).values().cloned() {
        sum = sum + value;
    }
    return sum;
}
fn collect_keys(d: std::collections::HashMap<String, i64>) -> Vec<String> {
    let mut out: Vec<String> = Vec::<String>::new();
    for key in (d).keys().cloned() {
        let _ = out.push(key.to_string());
    }
    return out.clone();
}
fn doubled(d: std::collections::HashMap<String, i64>) -> Vec<i64> {
    return {
        let mut __v = (((d).values().cloned())
            .map(|value| value * 2)
            .collect::<Vec<_>>())
            .clone();
        __v.sort();
        __v
    };
}
fn ordered_values(d: std::collections::HashMap<String, i64>) -> Vec<i64> {
    return {
        let mut __v = (d.values().cloned().collect::<Vec<_>>()).clone();
        __v.sort();
        __v
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut d: std::collections::HashMap<String, i64> = std::collections::HashMap::new();
    d.insert("b".to_string(), 2);
    d.insert("a".to_string(), 1);
    let _ = println!("{}", names(d.clone()));
    let _ = println!("{}", has(d.clone(), "a".to_string()));
    let _ = println!("{}", count_keys(d.clone()));
    let _ = println!("{}", total(d.clone()));
    let _ = println!(
        "{}", ::std::convert::identity(collect_keys(d.clone()).len() as i64)
    );
    let _ = println!("{}", doubled(d.clone()));
    let _ = println!("{}", ordered_values(d.clone()));
}
