loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1668_mut_dict_param.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn record(
    files: &mut std::collections::HashMap<String, String>,
    key: String,
    value: String,
) {
    files.insert(key, value);
}
fn seen(files: &mut std::collections::HashMap<String, i64>, key: String) -> bool {
    if files.contains_key(<_ as AsRef<str>>::as_ref(&key)) {
        return true;
    }
    files.insert(key, 1);
    return false;
}
fn lookup(files: &mut std::collections::HashMap<String, i64>, key: String) -> i64 {
    return files.get(<_ as AsRef<str>>::as_ref(&key)).copied().unwrap_or(0);
}
fn tally(counts: &mut std::collections::HashMap<i64, i64>, id: i64) -> bool {
    if !counts.contains_key(&id) {
        counts.insert(id, 0);
    }
    return counts.contains_key(&id);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut files: std::collections::HashMap<String, String> = std::collections::HashMap::new();
    let _ = record(&mut files, "a.incn".to_string(), "alpha".to_string());
    let mut hits: std::collections::HashMap<String, i64> = std::collections::HashMap::new();
    let _ = println!("{}", seen(& mut hits, "a.incn".to_string()));
    let _ = println!("{}", seen(& mut hits, "a.incn".to_string()));
    let _ = println!("{}", lookup(& mut hits, "a.incn".to_string()));
    let mut counts: std::collections::HashMap<i64, i64> = std::collections::HashMap::new();
    let _ = println!("{}", tally(& mut counts, 3));
}
