loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1668_mut_str_match_arm.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, PartialEq)]
enum Verdict {
    Admitted,
    Rejected(String),
}
impl incan_std_core::reflection::HasTypeClassName for Verdict {
    fn __class_name__() -> &'static str {
        "Verdict"
    }
}
fn describe(verdict: Verdict) -> String {
    let mut label = "pending".to_string();
    let _ = match verdict {
        Verdict::Admitted => {
            label = "admitted".to_string();
        }
        Verdict::Rejected(reason) => {
            label = reason;
        }
    };
    return label.clone();
}
fn classify(code: String, strict: bool) -> String {
    let mut kind: String = "other".to_string();
    let _ = match code {
        ref __incan_match_string_literal if __incan_match_string_literal.as_str()
            == "a" => {
            kind = "alpha".to_string();
        }
        ref __incan_match_string_literal if __incan_match_string_literal.as_str()
            == "b" => {
            if strict {
                kind = "beta-strict".to_string();
            } else {
                kind = "beta".to_string();
            }
        }
        _ => {
            let _ = ();
        }
    };
    return kind.clone();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", describe(Verdict::Admitted.clone()));
    let _ = println!("{}", describe(Verdict::Rejected("no manifest".to_string())));
    let _ = println!("{}", classify("b".to_string(), true));
}
