loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1668_std_environ_args.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::environ::args;
fn subcommand(arguments: Vec<String>) -> String {
    if ::std::convert::identity(arguments.len() as i64) < 2 {
        return "help".to_string();
    }
    return incan_std_core::collections::list_get(&arguments, (1) as i64).clone();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let arguments = crate::__incan_std::environ::args();
    let _ = println!("{}", subcommand(arguments.clone()));
    for argument in incan_std_core::collections::list_slice(
        &arguments,
        Some((1) as i64),
        None,
        None,
    ) {
        let _ = println!("{}", argument);
    }
}
