loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1668_str_encode_bytes_decode.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
const GREETING: incan_std_core::frozen::FrozenStr = incan_std_core::frozen::FrozenStr::new(
    "héllo",
);
const RAW: incan_std_core::frozen::FrozenBytes = incan_std_core::frozen::FrozenBytes::new(
    b"raw",
);
fn utf8_bytes(text: String) -> Vec<u8> {
    return (text).as_bytes().to_vec();
}
fn utf8_bytes_named(text: String) -> Vec<u8> {
    return (text).as_bytes().to_vec();
}
fn runtime_label(text: String, label: String) -> Vec<u8> {
    return match <_ as AsRef<str>>::as_ref(&label)
        .trim()
        .to_ascii_lowercase()
        .replace('_', "-")
        .as_str()
    {
        "utf-8" | "utf8" => (text).as_bytes().to_vec(),
        __incan_encoding => {
            incan_std_core::errors::raise_value_error(
                &format!(
                    "str.encode() supports only utf-8 in this release, got encoding '{__incan_encoding}'"
                ),
            )
        }
    };
}
fn round_trip(data: Vec<u8>) -> String {
    return match ::std::str::from_utf8(<_ as AsRef<[u8]>>::as_ref(&data)) {
        Ok(__incan_text) => __incan_text.to_string(),
        Err(__incan_error) => {
            incan_std_core::errors::raise_value_error(
                &format!("'utf-8' codec can't decode input: {__incan_error}"),
            )
        }
    };
}
fn lossy(data: Vec<u8>) -> String {
    return String::from_utf8_lossy(<_ as AsRef<[u8]>>::as_ref(&data)).into_owned();
}
fn runtime_policy(data: Vec<u8>, policy: String) -> String {
    return match <_ as AsRef<str>>::as_ref(&policy) {
        "strict" => {
            match ::std::str::from_utf8(<_ as AsRef<[u8]>>::as_ref(&data)) {
                Ok(__incan_text) => __incan_text.to_string(),
                Err(__incan_error) => {
                    incan_std_core::errors::raise_value_error(
                        &format!("'utf-8' codec can't decode input: {__incan_error}"),
                    )
                }
            }
        }
        "replace" => {
            String::from_utf8_lossy(<_ as AsRef<[u8]>>::as_ref(&data)).into_owned()
        }
        __incan_policy => {
            incan_std_core::errors::raise_value_error(
                &format!(
                    "bytes.decode() errors must be \"strict\" or \"replace\", got '{__incan_policy}'"
                ),
            )
        }
    };
}
fn frozen_round_trip() -> String {
    return incan_std_core::strings::str_concat(
        &match ::std::str::from_utf8(<_ as AsRef<[u8]>>::as_ref(&RAW)) {
            Ok(__incan_text) => __incan_text.to_string(),
            Err(__incan_error) => {
                incan_std_core::errors::raise_value_error(
                    &format!("'utf-8' codec can't decode input: {__incan_error}"),
                )
            }
        },
        &match ::std::str::from_utf8(
            <_ as AsRef<
                [u8],
            >>::as_ref(&(<_ as AsRef<str>>::as_ref(&GREETING)).as_bytes().to_vec()),
        ) {
            Ok(__incan_text) => __incan_text.to_string(),
            Err(__incan_error) => {
                incan_std_core::errors::raise_value_error(
                    &format!("'utf-8' codec can't decode input: {__incan_error}"),
                )
            }
        },
    );
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let payload = utf8_bytes("héllo".to_string());
    let _ = println!("{}", ::std::convert::identity(payload.len() as i64));
    let _ = println!("{}", round_trip(payload));
    let _ = println!("{}", lossy(b"\xFF".to_vec()));
    let _ = println!(
        "{}", ::std::convert::identity(utf8_bytes_named("b".to_string()).len() as i64) +
        ::std::convert::identity(runtime_label("c".to_string(), "utf8".to_string()).len()
        as i64)
    );
    let _ = println!("{}", runtime_policy(b"ok".to_vec(), "strict".to_string()));
    let _ = println!("{}", frozen_round_trip());
}
